fix: hide sidebar collapse button on mobile

--- a/app/src/components/sidebar/Sidebar.less
+++ b/app/src/components/sidebar/Sidebar.less
@@ -420,4 +420,8 @@
       transform: translateX(0);
     }
   }
+
+  .panel-toggle {
+    display: none;
+  }
 }
